# firebird-odbc-driver

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Attributes.cpp  Attributes.h  CMakeLists.txt  CMakePresets.json  ChangeLog  ChangeLog_v3.0  ConnectDialog.cpp  ConnectDialog.h  Connection.h  DescRecord.cpp  DescRecord.h  FirebirdODBC.dll.manifest  InfoItems.h  IscHeadSqlVar.h  IscOdbcStatement.cpp  LoadFbClientDll.cpp  Main.cpp  Main.h  MainUnicode.cpp  MbsAndWcs.cpp  Mlist.h  OdbcConnection.cpp  OdbcConnection.h  OdbcConvert.cpp  OdbcConvert.h  OdbcDateTime.cpp  OdbcDateTime.h  OdbcDesc.cpp  OdbcDesc.h  OdbcEnv.cpp  OdbcEnv.h  OdbcError.cpp  OdbcError.h  OdbcInstGetProp.cpp  OdbcJdbc.def  (+37 more)
.github/workflows/: MSBuild_ARM64  build-and-test.yml  build.yml  codeql.yml  linux.yml  msbuild.yml  msbuild_arm64.yaml  release.yml  rpi_arm64.yml
Builds/: delDependMT.bat  makefile.environ  makefile.sources  makefile.win_environ
Builds/Bcc55.win/: HowToCompileGuide-BCC55.txt  build.bat  build98.bat  buildNT.bat  makefile.bcc55
Builds/CC.solaris/: makefile.solaris
Builds/Gcc.darwin/: lipo.sh  makefile.darwin  readme.darwin
Builds/Gcc.freeBSD/: makefile.freeBSD  readme.freeBSD
Builds/Gcc.lin/: makefile.linux  readme.linux
Builds/Gcc.linux.cmake/: CMakeLists.txt
Builds/MsSDK64.win/: BUILD.BAT  (+1 more)
Docs/: CONVERSION_MATRIX.md  FIREBIRD_ODBC_MASTER_PLAN.md  FIREBIRD_ODBC_MASTER_PLAN.original.md  PERFORMANCE_RESULTS.md  firebird-api.MD  firebird-driver-feature-map.md
Headers/: OdbcUserEvents.h  SQL.H  SQLEXT.H
Install/: IDPLicense.txt  ReleaseNotes_v1.2.html  ReleaseNotes_v2.0.html  ReleaseNotes_v3.0.html
IscDbc/: AsciiBlob.cpp  AsciiBlob.h  Attachment.cpp  Attachment.h  BinToHexStr.h  BinaryBlob.cpp  BinaryBlob.h  Blob.cpp  Blob.h  CMakeLists.txt  Connection.h  DateTime.cpp  DateTime.h  Engine.h  EnvShare.cpp  EnvShare.h  Error.cpp  Error.h  IscArray.cpp  IscArray.h  IscBlob.cpp  IscBlob.h  IscCallableStatement.cpp  IscCallableStatement.h  IscColumnKeyInfo.cpp  IscColumnKeyInfo.h  IscColumnPrivilegesResultSet.cpp  IscColumnPrivilegesResultSet.h  IscColumnsResultSet.cpp  IscColumnsResultSet.h  IscConnection.cpp  IscConnection.h  IscCrossReferenceResultSet.cpp  IscCrossReferenceResultSet.h  IscDatabaseMetaData.cpp  IscDatabaseMetaData.h  IscDbc.def  IscDbc.dsp  IscDbc.exp  IscDbc.h  (+88 more)
JdbcTest/: JdbcTest.dsp  JdbcTest.plg  Test.cpp
OdbcJdbcSetup/: CommonUtil.cpp  CommonUtil.h  DsnDialog.cpp  DsnDialog.h  OdbcJdbcSetup.aps  OdbcJdbcSetup.clw  OdbcJdbcSetup.cpp  OdbcJdbcSetup.def  OdbcJdbcSetup.dep  OdbcJdbcSetup.exp  OdbcJdbcSetup.h  OdbcJdbcSetup.mak  OdbcJdbcSetup.plg  OdbcJdbcSetup.rc  OdbcJdbcSetupMinGw.def  OdbcJdbcsetup.dsp  ReadMe.txt  ServiceClient.cpp  ServiceClient.h  ServiceTabBackup.cpp  ServiceTabBackup.h  ServiceTabChild.cpp  ServiceTabChild.h  ServiceTabCtrl.cpp  ServiceTabCtrl.h  ServiceTabRepair.cpp  ServiceTabRepair.h  ServiceTabRestore.cpp  ServiceTabRestore.h  ServiceTabStatistics.cpp  ServiceTabStatistics.h  ServiceTabUsers.cpp  ServiceTabUsers.h  Setup.cpp  Setup.h  StdAfx.cpp  StdAfx.h  UserDialog.cpp  UserDialog.h  UsersTabChild.cpp  (+8 more)
Res/: resource.en  resource.es  resource.it  resource.ru  resource.uk
Test/: Constraint.cpp  Constraint.h  Database.cpp  Database.h  Field.cpp  Field.h  Gen.cpp  Gen.h  Hash.cpp  Hash.h  Index.cpp  Index.h  JString.cpp  JString.h  LinkedList.cpp  LinkedList.h  NetfraDatabase.cpp  NetfraDatabase.h  NetfraRemote.lib  Odbc.cpp  Odbc.h  Print.cpp  Print.h  RString.cpp  RString.h  SimpleTest.cpp  StdAfx.h  Table.cpp  Table.h  Test.001  Test.cpp  Test.dsp  Test.plg  Type.cpp  Type.h  scrambledTest.cpp  statistics.cpp
TestInstall/: TestInstall.cpp  TestInstall.dsp  TestInstall.plg
cmake/: FetchFirebirdHeaders.cmake  GetVersionFromGit.cmake  Version.h.in
installer/: Product.wxs
src/: ConnectDialog.cpp  ConnectDialog.h  DescRecord.cpp  DescRecord.h  InfoItems.h  Main.cpp  Main.h  MainUnicode.cpp  MbsAndWcs.cpp  OdbcConnection.cpp  OdbcConnection.h  OdbcConvert.cpp  OdbcConvert.h  OdbcDesc.cpp  OdbcDesc.h  OdbcEnv.cpp  OdbcEnv.h  OdbcError.cpp  OdbcError.h  OdbcInstGetProp.cpp  OdbcJdbc.def  OdbcJdbc.h  OdbcJdbc.rc  OdbcObject.cpp  OdbcObject.h  OdbcPerfCounters.cpp  OdbcPerfCounters.h  OdbcSqlState.h  OdbcStatement.cpp  OdbcStatement.h  OdbcString.h  SafeEnvThread.cpp  SafeEnvThread.h  SetupAttributes.h  TemplateConvert.h  Utf16Convert.cpp  Utf16Convert.h
src/IscDbc/: Attachment.cpp  Attachment.h  BinaryBlob.cpp  CDataStaticCursor.cpp  CMakeLists.txt  Connection.h  DateTime.cpp  DateTime.h  EnvShare.cpp  EnvShare.h  Error.cpp  FbClient.cpp  FbClient.h  FbDateConvert.h  IscArray.h  IscBlob.cpp  IscBlob.h  IscCallableStatement.cpp  IscCallableStatement.h  IscColumnKeyInfo.cpp  IscColumnsResultSet.cpp  IscColumnsResultSet.h  IscConnection.cpp  IscConnection.h  IscCrossReferenceResultSet.cpp  IscDatabaseMetaData.cpp  IscDatabaseMetaData.h  IscDbc.h  IscOdbcStatement.cpp  IscOdbcStatement.h  IscPreparedStatement.cpp  IscPreparedStatement.h  IscResultSet.cpp  IscResultSet.h  IscResultSetMetaData.cpp  IscSqlType.cpp  IscStatement.cpp  IscStatement.h  IscStatementMetaData.cpp  IscTablePrivilegesResultSet.cpp  (+24 more)
tests/: CMakeLists.txt  README.md  bench_fetch.cpp  test_array_binding.cpp  test_bind_cycle.cpp  test_bindcol.cpp  test_blob.cpp  test_catalogfunctions.cpp  test_conn_settings.cpp  test_connect_options.cpp  test_connection.cpp  test_connection_attrs.cpp  test_cursor.cpp  test_cursor_commit.cpp  test_cursor_name.cpp  test_cursors.cpp  test_data_at_execution.cpp  test_data_types.cpp  test_descrec.cpp  test_descriptor.cpp  test_errors.cpp  test_escape_sequences.cpp  test_guid_and_binary.cpp  test_helpers.h  test_main.cpp  test_multi_statement.cpp  test_null_handles.cpp  test_numeric_to_varchar.cpp  test_odbc38_compliance.cpp  test_odbc_string.cpp  test_param_conversions.cpp  test_phase11_typeinfo_timeout_pool.cpp  test_phase7_crusher_fixes.cpp  test_prepare.cpp  test_query_timeout.cpp  test_result_conversions.cpp  test_savepoint.cpp  test_scrollable_cursor.cpp  test_server_version.cpp  test_stmthandles.cpp  (+2 more)
(+217 files in other folders)
